# pocus

./: .gitignore  BUG_REPORT.md
tas/: .dockerignore  .firebaserc  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  extract_venues.py  firebase.json  firestore.rules  pyproject.toml  start.sh  write_chubu_to_sheets.py  write_hokkaido_to_sheets.py  write_kanto_tohoku_to_sheets.py
tas/.firebase/: hosting.dWkvZGlzdA.cache
tas/alembic/: env.py
tas/alembic/versions/: 0001_initial_schema.py  0002_add_source_sheet_row_num.py  0003_add_venue_last_updated_at.py  0004_add_venue_field_confidence.py  0005_add_merge_candidate_audit.py
tas/scripts/: audit_venues.py  crawl_all_venues.py  dump_seed_json.cjs  import_seed_to_db.py  register_venue_sources.py  seed_venues.json  sync_firestore_to_db.py
tas/seeds/: fixtures.json
tas/tas/: __init__.py  cli.py  config.py  constants.py  sheets.py
tas/tas/api/: auth.py  limiter.py  main.py  schemas.py
tas/tas/api/routes/: admin.py  map.py  sheets.py  tournament.py  venue.py
tas/tas/crawler/: ai_verify.py  engine.py  fetcher.py  geocoder.py  link_extractor.py  normalizer.py  parser.py  web_search.py
tas/tas/db/: models.py  session.py
tas/tas/seeds/: sheets.py
tas/tests/: conftest.py  test_api.py  test_engine.py  test_fetcher.py  test_normalizer.py  test_parser.py
tas/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tas/ui/src/: App.tsx  constants.ts  index.css
tas/ui/src/api/: client.ts
tas/ui/src/components/: FilterBar.tsx  MapView.tsx  P1Icons.tsx  Sidebar.tsx  (+2 more)
(+10 files in other folders)
